# test-structure

./: .cproject  .project  CMakeLists.txt
lib/arch/Core/Inc/: FreeRTOSConfig.h
src/: main.c
