cmake_minimum_required(VERSION 3.22.1)

project(OBC)

set(CMAKE_C_STANDARD 99)

include_directories(lib/arch/Core/Inc)
include_directories(lib/arch/Core/Src)
include_directories(lib/arch/Core/Startup)
include_directories(lib/arch/Drivers/CMSIS/Device/ST/STM32H7xx/Include)
include_directories(lib/arch/Drivers/CMSIS/Include)
include_directories(lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc)
include_directories(lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/Legacy)
include_directories(lib/arch/Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS_V2)
include_directories(lib/arch/Middlewares/Third_Party/FreeRTOS/Source/include)
include_directories(lib/arch/Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM4F)
include_directories(src/adcs)
include_directories(src/comms)
include_directories(src/deployment)
include_directories(src/eps)
include_directories(src/payloads)
include_directories(src/sensors)
include_directories(src/watchdog)
include_directories(src)


add_executable(obc 
    src/main.h
    src/main.c
    src/watchdog/watchdog.h
    src/watchdog/watchdog.c
    src/sensors/sensors.h
    src/sensors/sensors.c
    src/payloads/payloads.h
    src/payloads/payloads.c
    src/eps/eps.h
    src/eps/eps.c
    src/deployment/deployment.h
    src/deployment/deployment.c
    src/comms/comms.h
    src/comms/comms.c
    src/adcs/adcs.h
    src/adcs/adcs.c
    lib/arch/Middlewares/Third_Party/FreeRTOS/Source/timers.c
    lib/arch/Middlewares/Third_Party/FreeRTOS/Source/tasks.c
    lib/arch/Middlewares/Third_Party/FreeRTOS/Source/stream_buffer.c
    lib/arch/Middlewares/Third_Party/FreeRTOS/Source/queue.c
    lib/arch/Middlewares/Third_Party/FreeRTOS/Source/list.c
    lib/arch/Middlewares/Third_Party/FreeRTOS/Source/event_groups.c
    lib/arch/Middlewares/Third_Party/FreeRTOS/Source/croutine.c
    lib/arch/Middlewares/Third_Party/FreeRTOS/Source/portable/MemMang/heap_4.c
    lib/arch/Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM4F/portmacro.h
    lib/arch/Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM4F/port.c
    lib/arch/Middlewares/Third_Party/FreeRTOS/Source/include/timers.h
    lib/arch/Middlewares/Third_Party/FreeRTOS/Source/include/task.h
    lib/arch/Middlewares/Third_Party/FreeRTOS/Source/include/stream_buffer.h
    lib/arch/Middlewares/Third_Party/FreeRTOS/Source/include/StackMacros.h
    lib/arch/Middlewares/Third_Party/FreeRTOS/Source/include/stack_macros.h
    lib/arch/Middlewares/Third_Party/FreeRTOS/Source/include/semphr.h
    lib/arch/Middlewares/Third_Party/FreeRTOS/Source/include/queue.h
    lib/arch/Middlewares/Third_Party/FreeRTOS/Source/include/projdefs.h
    lib/arch/Middlewares/Third_Party/FreeRTOS/Source/include/portable.h
    lib/arch/Middlewares/Third_Party/FreeRTOS/Source/include/mpu_wrappers.h
    lib/arch/Middlewares/Third_Party/FreeRTOS/Source/include/mpu_prototypes.h
    lib/arch/Middlewares/Third_Party/FreeRTOS/Source/include/message_buffer.h
    lib/arch/Middlewares/Third_Party/FreeRTOS/Source/include/list.h
    lib/arch/Middlewares/Third_Party/FreeRTOS/Source/include/FreeRTOS.h
    lib/arch/Middlewares/Third_Party/FreeRTOS/Source/include/event_groups.h
    lib/arch/Middlewares/Third_Party/FreeRTOS/Source/include/deprecated_definitions.h
    lib/arch/Middlewares/Third_Party/FreeRTOS/Source/include/croutine.h
    lib/arch/Middlewares/Third_Party/FreeRTOS/Source/include/atomic.h
    lib/arch/Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS_V2/freertos_os2.h
    lib/arch/Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS_V2/freertos_mpool.h
    lib/arch/Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS_V2/cmsis_os2.h
    lib/arch/Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS_V2/cmsis_os2.c
    lib/arch/Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS_V2/cmsis_os.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_utils.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_usb.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_usart.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_tim.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_swpmi.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_spi.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_sdmmc.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_rtc.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_rng.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_rcc.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_pwr.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_opamp.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_mdma.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_lpuart.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_lptim.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_i2c.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_hrtim.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_gpio.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_fmc.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_fmac.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_exti.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_dma2d.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_dma.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_delayblock.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_dac.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_crs.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_crc.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_cordic.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_comp.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_bdma.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_adc.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_wwdg.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_usart.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_usart_ex.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_uart.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_uart_ex.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_timebase_tim_template.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_timebase_rtc_wakeup_template.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_timebase_rtc_alarm_template.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_tim.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_tim_ex.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_swpmi.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_sram.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_spi.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_spi_ex.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_spdifrx.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_smbus.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_smbus_ex.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_smartcard.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_smartcard_ex.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_sdram.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_sd.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_sd_ex.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_sai.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_sai_ex.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_rtc.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_rtc_ex.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_rng.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_rng_ex.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_rcc.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_rcc_ex.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_ramecc.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_qspi.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_pwr.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_pwr_ex.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_pssi.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_pcd.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_pcd_ex.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_otfdec.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_ospi.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_opamp.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_nor.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_nand.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_msp_template.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_mmc.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_mmc_ex.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_mdma.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_mdios.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_ltdc.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_ltdc_ex.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_lptim.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_jpeg.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_iwdg.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_irda.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_i2s.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_i2s_ex.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_i2c.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_i2c_ex.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_hsem.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_hrtim.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_hcd.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_hash.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_hash_ex.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_gpio.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_gfxmmu.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_fmac.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_flash.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_flash_ex.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_fdcan.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_exti.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_eth.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_eth_ex.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_dts.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_dsi.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_dma2d.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_dma.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_dma_ex.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_dfsdm.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_dfsdm_ex.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_dcmi.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_dac.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_dac_ex.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_cryp.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_cryp_ex.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_cryp_ex.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_crc.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_crc_ex.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_cortex.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_cordic.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_comp.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_cec.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_adc.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_adc_ex.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/Legacy/stm32h7xx_hal_eth.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Src/Legacy/stm32h7xx_hal_eth_ex.c
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_ll_wwdg.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_ll_utils.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_ll_usb.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_ll_usart.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_ll_tim.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_ll_system.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_ll_swpmi.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_ll_sdmmc.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_ll_rtc.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_ll_rng.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_ll_rcc.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_ll_pwr.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_ll_opamp.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_ll_mdma.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_ll_lpuart.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_ll_lptim.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_ll_iwdg.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_ll_i2c.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_ll_hsem.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_ll_hrtim.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_ll_gpio.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_ll_fmc.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_ll_fmac.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_ll_exti.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_ll_dmamux.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_ll_dma2d.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_ll_dma.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_ll_delayblock.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_ll_dac.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_ll_crs.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_ll_cortex.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_ll_cordic.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_ll_comp.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_ll_bus.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_ll_bdma.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_ll_adc.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_wwdg.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_usart.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_usart_ex.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_uart.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_uart_ex.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_tim.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_tim_ex.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_swpmi.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_sram.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_spi.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_spi_ex.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_spdifrx.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_smbus.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_smbus_ex.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_smartcard.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_sdram.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_sd.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_sd_ex.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_sai.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_sai_ex.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_rtc.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_rtc_ex.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_rng.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_rng_ex.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_rcc.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_rcc_ex.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_ramecc.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_qspi.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_pwr.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_pwr_ex.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_pssi.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_pcd.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_pcd_ex.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_otfdec.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_ospi.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_opamp.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_opamp_ex.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_nor.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_nand.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_mmc.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_mmc_ex.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_mdma.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_mdios.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_ltdc.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_ltdc_ex.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_lptim.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_jpeg.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_iwdg.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_irda.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_i2s.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_i2s_ex.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_i2c.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_i2c_ex.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_hsem.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_hrtim.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_hcd.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_hash.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_hash_ex.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_gfxmmu.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_fmac.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_flash.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_flash_ex.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_fdcan.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_exti.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_eth.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_eth_ex.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_dts.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_dsi.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_dma2d.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_dma.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_dma_ex.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_dfsdm.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_dfsdm_ex.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_def.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_dcmi.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_dac.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_dac_ex.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_cryp.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_cryp_ex.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_crc.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_crc_ex.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_cortex.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_cordic.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_conf_template.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_comp.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_cec.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_adc.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_adc_ex.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/stm32_assert_template.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/Legacy/stm32h7xx_hal_eth_legacy.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/Legacy/stm32h7xx_hal_eth_ex_legacy.h
    lib/arch/Drivers/STM32H7xx_HAL_Driver/Inc/Legacy/stm32_hal_legacy.h
    lib/arch/Drivers/CMSIS/Include/tz_context.h
    lib/arch/Drivers/CMSIS/Include/mpu_armv8.h
    lib/arch/Drivers/CMSIS/Include/mpu_armv7.h
    lib/arch/Drivers/CMSIS/Include/core_sc300.h
    lib/arch/Drivers/CMSIS/Include/core_sc000.h
    lib/arch/Drivers/CMSIS/Include/core_cm35p.h
    lib/arch/Drivers/CMSIS/Include/core_cm33.h
    lib/arch/Drivers/CMSIS/Include/core_cm23.h
    lib/arch/Drivers/CMSIS/Include/core_cm7.h
    lib/arch/Drivers/CMSIS/Include/core_cm4.h
    lib/arch/Drivers/CMSIS/Include/core_cm3.h
    lib/arch/Drivers/CMSIS/Include/core_cm1.h
    lib/arch/Drivers/CMSIS/Include/core_cm0plus.h
    lib/arch/Drivers/CMSIS/Include/core_cm0.h
    lib/arch/Drivers/CMSIS/Include/core_armv81mml.h
    lib/arch/Drivers/CMSIS/Include/core_armv8mml.h
    lib/arch/Drivers/CMSIS/Include/core_armv8mbl.h
    lib/arch/Drivers/CMSIS/Include/cmsis_version.h
    lib/arch/Drivers/CMSIS/Include/cmsis_iccarm.h
    lib/arch/Drivers/CMSIS/Include/cmsis_gcc.h
    lib/arch/Drivers/CMSIS/Include/cmsis_compiler.h
    lib/arch/Drivers/CMSIS/Include/cmsis_armclang.h
    lib/arch/Drivers/CMSIS/Include/cmsis_armclang_ltm.h
    lib/arch/Drivers/CMSIS/Include/cmsis_armcc.h
    lib/arch/Drivers/CMSIS/Device/ST/STM32H7xx/Include/system_stm32h7xx.h
    lib/arch/Drivers/CMSIS/Device/ST/STM32H7xx/Include/stm32h743xx.h
    lib/arch/Drivers/CMSIS/Device/ST/STM32H7xx/Include/stm32h7xx.h
    lib/arch/Core/Src/system_stm32h7xx.c
    lib/arch/Core/Src/sysmem.c
    lib/arch/Core/Src/syscalls.c
    lib/arch/Core/Inc/FreeRTOSConfig.h
    lib/arch/Core/Inc/stm32h7xx_hal_conf.h
    lib/arch/Core/Inc/stm32h7xx_it.h
)